# yova

./: .gitignore  LICENSE  Makefile  README.md  install_audio_deps.sh  pyproject.toml  yova.config.default.json
3d_models/: yova.skp  yova_case_bottom.stl  yova_case_cover.stl  yova_case_port_holder.stl  yova_case_speaker_holder.stl  yova_case_top.stl
configs/: supervisord.conf
docs/: api_connector_example.md  architecture.md  audio_processing.md  config.md  develompment.md  events.md  install.md  integration.md  perf_test_report.md  performance.md  troubleshooting.md  voice_id.md
docs/events/: tts_chunk.md
scripts/: install.sh  install_audio_deps.sh  install_ecapa.sh  supervisor-manager.sh  supervisor_dev.py  supervisord.service  yova.service
tests/: __init__.py  test_audio_buffer.py  test_audio_recorder.py  test_audio_session_manager.py  test_data_playback.py  test_data_playback_integration.py  test_echo_connector.py  test_event_emitter.py  test_event_emitter_integration.py  test_main.py  test_openai_connector.py  test_openai_transcription_provider.py  test_realtime_transcriber.py  test_speech_task.py  test_stream_playback.py  test_transcription_provider_abstraction.py  test_websocket_handler.py
tests/asr/: README.md  asr_test.py
tests/yova_api_openai/: test_openai_connector.py
tests/yova_core/: test_audio_recorder.py  test_data_playback_integration.py  test_openai_transcription_provider.py  test_realtime_api.py  test_realtime_transcriber.py  test_speech_task.py  test_stream_playback.py  test_transcriber.py  test_transcription_provider_abstraction.py
tests/yova_shared/: test_event_emitter.py  test_event_emitter_integration.py
voice_command_station/: __init__.py  main.py
voice_command_station/api/: __init__.py  api_connector.py  echo_connector.py  openai_connector.py
voice_command_station/core/: __init__.py  event_emitter.py  logging_utils.py
voice_command_station/speech2text/: __init__.py  audio_recorder.py  audio_session_manager.py  openai_transcription_provider.py  realtime_transcriber.py  transcription_provider.py  websocket_handler.py
voice_command_station/text2speech/: __init__.py  data_playback.py  playback.py  speech_handler.py  speech_task.py  stream_playback.py
yova_api_openai/: __init__.py  conversation_history.py  main.py  openai_connector.py
yova_broker/: README.md  __init__.py  broker.py  broker_monitor.py  broker_tester.py  broker_validator.py  client.py  main.py
yova_broker/schemas/: __init__.py  yova_api_asr_result.py  yova_api_error.py  yova_api_thinking_start.py  yova_api_thinking_stop.py  yova_api_tts_chunk.py  yova_api_tts_complete.py  yova_api_usage_occur.py  yova_core_audio_play_start.py  yova_core_audio_record_start.py  yova_core_error.py  yova_core_health_ping.py  yova_core_input_state.py  yova_core_state_change.py  yova_core_usage_change.py
yova_client_dev_tools/: __init__.py  main.py  profiler.py  ui.py
yova_client_respeaker_hat/: __init__.py  led_demo.py  main.py
yova_core/: __init__.py  cost_tracker.py  main.py  state_machine.py  voice_id.py
yova_core/api/: __init__.py  (+2 more)
yova_dev_tools/: main.py  ui.py
yova_shared/: __init__.py  config.py  event_emitter.py  logging_utils.py  play_audio.py
(+60 files in other folders)
