[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "voice-command-station"
version = "0.1.0"
description = "A simple voice command station"
authors = ["Krzysztof Jamroz"]
readme = "README.md"
packages = [{include = "voice_command_station"}]

[tool.poetry.dependencies]
python = "^3.8"
websockets = "^12.0"
openai = "^1.0.0"
pyaudio = "^0.2.14"
sounddevice = "^0.4.6"
numpy = "^1.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.21.0"

[tool.poetry.scripts]
voice-command-station = "voice_command_station.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
