[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "yova"
version = "0.1.0"
description = "YOVA - Your Own Voice Assistant"
authors = ["Krzysztof Jamroz"]
readme = "README.md"
packages = [{include = "yova_core"}, {include = "yova_broker"}]

[tool.poetry.dependencies]
python = "^3.8"
websockets = "^12.0"
openai = "^1.0.0"
pyaudio = "^0.2.14"
sounddevice = "^0.4.6"
numpy = "^1.24.0"
python-dotenv = "^1.0.0"
soundfile = "^0.13.1"
pydub = "^0.25.1"
simpleaudio = "^1.0.4"
supervisor = "^4.2.5"
pyzmq = "^25.1.0"
urwid = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.21.0"

[tool.poetry.scripts]
yova = "yova_core.main:run"
yova-broker = "yova_broker.main:run"
yova-api-openai = "yova_api_openai.main:run"
yova-client-dev-tools = "yova_client_dev_tools.main:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning:pydub.*",
    "ignore::DeprecationWarning:audioop.*",
    "ignore::DeprecationWarning",
    "ignore:.*audioop.*:DeprecationWarning"
]
